# lrparser

./: .gitignore  CMakeLists.txt  Makefile  README.md  ansi-c.txt  c.txt  env.cmd  grammar.txt  input.txt  main.cpp  run.sh  tools.sh
automata/: automata.cpp  automata.h
display/: display.cpp
grammar/: grammar.cpp  grammar.h
gui/: Automaton.py  GuiConfig.py  Lexer.py  Model.py  ParseTable.py  main.py
include/: display.h  synbase.h  synctx.h  synreader.h
port/: pipe.h
src/: common.h  help.cpp  help.sh  help.txt  main.cpp
src/automata/: Automaton.cpp  Automaton.h  PushDownAutomaton.cpp  PushDownAutomaton.h  automata.cpp  automata.h
src/display/: DefaultDisplay.cpp  display.cpp  display.h  steps.cpp  steps.h
src/grammar/: Grammar.cpp  Grammar.h  GrammarReader.cpp  GrammarReader.h  gram.cpp  gram.h  grammar.cpp  grammar.h  lr.cpp  lr.h  reader.cpp  reader.h  syntax.cpp  syntax.h
src/gui/: Attribute.py  Automaton.py  Editor.py  GuiConfig.py  Lexer.py  ParseTable.py  index.py  main.py  model.py
src/gui/tabs/: attribute.py  grammar.py
src/parser/: LALRParser.h  LR0Parser.h  LR1Parser.h  LRParser.cpp  LRParser.h  SLRParser.h
src/util/: BitSet.h  Formatter.h  HashSet.h  Process.h  ResourceProvider.h  TokenReader.h  TreeSet.h  bitset.cpp  bitset.h  exec.h  formatter.h
syndef/: synctx.cpp  synreader.cpp
util/: display.cpp  display.h  formatter.cpp  formatter.h  str.cpp  str.h
